<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_food"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:src="@android:color/holo_green_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"/>

    <TextView
        android:id="@+id/txt_food_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_food_name_dummy"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_food"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_food_seller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_food_seller_dummy"
        app:layout_constraintStart_toEndOf="@+id/img_food"
        app:layout_constraintTop_toBottomOf="@+id/txt_food_name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/txt_food_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_free_food_dummy"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintStart_toEndOf="@+id/img_food"
        app:layout_constraintTop_toBottomOf="@+id/txt_food_seller"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>